--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "4.9.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
