--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="postgres://world_movies_6dij_user:QZeuMVhGu7m2TkAqGk8AGpwndj5xyIBn@dpg-cf6n87un6mplrj1fj1og-a.oregon-postgres.render.com/world_movies_6dij"
+DATABASE_URL="mongodb+srv://zaclima9:Isaac92167497@cluster0.luwr2vk.mongodb.net/wmdb"
 
 JWT_SECRET= "92167497"
