--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="mongodb+srv://zaclima9:Isaac92167497@cluster0.luwr2vk.mongodb.net/wmdb"
+DATABASE_URL="postgres://wmdb_bo2f_user:lbV6IelLHzqjEgYHLVRkCaBydM3cQyXb@dpg-cfhfes9gp3jh03ku4sng-a.oregon-postgres.render.com/wmdb_bo2f"
 
 JWT_SECRET= "92167497"
